# globalprotect-openconnect-openui

./: README.md  index.html  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: sync-version.yml
src/: types.ts  useAppTheme.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  cli.rs  commands.rs  connect.rs  lib.rs  main.rs  service_client.rs
src/components/: ConnectedView.tsx  ConnectingView.tsx  DisconnectedView.tsx  DisconnectingView.tsx  SettingsPage.tsx
src/components/App/: App.tsx
src/pages/: main.tsx
